# MuseAI-Platform

./: .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
crates/muse-engine/: Cargo.toml
crates/muse-engine/src/: error.rs  host.rs  lib.rs  model.rs  store.rs
server/: Cargo.toml
server/migrations/: 0001_init.sql  0002_tick_hardening.sql  0003_consent_responses.sql  0004_notification_dedupe_index.sql  0005_chapter_hardening.sql  0006_billing.sql  0007_arena.sql  0008_gift_clips.sql  0009_character_manifest.sql  0010_timeline.sql  0011_world_asset_templates.sql  0012_arena_spectate.sql  0013_creator_economy.sql  0014_room_revive_pricing.sql  0015_p3_cloud_growth_item_shop.sql  0016_character_avatar.sql  0017_world_discovery.sql  0018_moderation_appeals.sql  0019_progression.sql  0020_template_star.sql
server/src/: app.rs  config.rs  db.rs  error.rs  idempotency.rs  main.rs  queue.rs
server/src/admin_api/: audit.rs  dashboards.rs  governance.rs  mod.rs  ops.rs  reconcile.rs  tests.rs  users.rs  worlds_ops.rs
server/src/admission/: mod.rs
server/src/arena/: mod.rs  tests.rs
server/src/assembly/: mod.rs
server/src/assets/: mod.rs  tests.rs  worlds.rs
server/src/auth/: mod.rs  tests.rs
server/src/backpack/: mod.rs
server/src/billing/: mod.rs  tests.rs
server/src/chapters/: mod.rs  tests.rs
server/src/clips/: mod.rs
server/src/consents/: mod.rs
server/src/events/: mod.rs
server/src/interventions/: mod.rs
server/src/ledger/: mod.rs  tests.rs
server/src/livegate/: mod.rs  tests.rs
server/src/notifications/: mod.rs
server/src/progression/: mod.rs  tests.rs
server/src/providers/: mod.rs
server/src/reports/: mod.rs
server/src/runtime/: mod.rs  tests.rs
server/src/safety/: inject.rs  mod.rs  testkit.rs
(+150 files in other folders)
