[package]
name = "muse-server"
version = "0.1.0"
edition = "2021"
description = "MuseAI 平台后端（P3–P6）：账号、资产、世界运行时、干预、通知、安全、章节房、赛事房"

[features]
default = []
# P4b 条件性：计费闭环（订单/余额/退款），文档阶段门未过默认不编译
billing = []
# P6 条件性：直播网关与高光切片
arena = []

[dependencies]
muse-engine = { path = "../crates/muse-engine" }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "sqlite", "postgres", "migrate"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
