[package]
name = "muse-engine"
version = "0.1.0"
edition = "2021"
description = "MuseAI 宿主无关核心引擎：角色提取(P0)、知识系统(P1)、自主叙事(P2)"

[features]
default = ["http"]
# reqwest 模型客户端；关闭后仅保留 trait，供纯测试环境使用
http = ["dep:reqwest", "dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["time", "sync", "macros"], optional = true }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
tempfile = "3"
